# storm

./: BUILD.gn  CMakeLists.txt  README.md
include/storm/: basic_log_sink.hpp  basic_logger.hpp  check.hpp  locking_logger.hpp  log.hpp  log_record.hpp  log_sinks.hpp  logger_facade.hpp  source_location.hpp  synchronous_logger.hpp
include/storm/detail/: config.hpp  namespaces.hpp  windows_console_color.hpp  windows_vtp_enabler.hpp
include/storm/detail/impl/: windows_console_color.cpp  windows_vtp_enabler.cpp
include/storm/impl/: basic_log_sink.cpp  basic_log_sink.hpp  basic_logger.cpp  basic_logger.hpp  locking_logger.hpp  log.hpp  logger_facade.hpp
include/storm/sinks/: ansi_color_sink.hpp  basic_file_sink.hpp  basic_stdio_sink.hpp  basic_stdout_sink.hpp  file_log_sink.hpp  min_severity_sink_wrapper.hpp  text_file_sink.hpp  text_stdio_sink.hpp  win_color_sink.hpp
include/storm/sinks/impl/: ansi_color_sink.hpp  basic_file_sink.cpp  basic_stdio_sink.cpp  basic_stdout_sink.cpp  file_log_sink.cpp  min_severity_sink_wrapper.hpp  text_file_sink.cpp  text_stdio_sink.cpp  win_color_sink.hpp
src/: check_handler_stderr_abort.cpp
